Fixed formatting for selection boxes to be the same is input boxes.

--- a/Maori Dictionary/static/css/style.css
+++ b/Maori Dictionary/static/css/style.css
@@ -152,7 +152,7 @@ footer img {
     padding: 8px;
 }
 
-.button-group input {
+.button-group input, select {
     margin-top: 5px;
     padding: 5px;
 }
